[package]
name = "yuque"
version = "0.1.1"
edition = "2021"
authors = ["k8scat <k8scat@gmail.com>"]
description = "Yuque Client SDK in Rust"
homepage = "https://github.com/k8scat/yuque"
license = "MIT"
keywords = ["Yuque", "SDK"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8.5"
